--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.16",
+    "pbkdf2-password": "^1.2.1",
     "sequelize": "^6.19.0"
   }
 }
