--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
+    "method-override": "^3.0.0",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.16",
     "pbkdf2-password": "^1.2.1",
